--- a/src/components/PixiPanel.scss
+++ b/src/components/PixiPanel.scss
@@ -1,10 +1,24 @@
 body {
-  margin: 0;
   font-family: Lucida Grande, sans-serif;
   font-size: 12px;
+  box-sizing: border-box;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.pixi-panel, div, span {
+  box-sizing: border-box;
 }
 .pixi-panel {
   cursor: default;
   font-size: 11px !important;
   font-family: Menlo, monospace;
+}
+
+#devpanel,
+.pixel-panel {
+  height: 100%;
 }
